fix overlap oc mac addr into configurations page

--- a/wizard/app/styles/main.css
+++ b/wizard/app/styles/main.css
@@ -3227,3 +3227,7 @@ a.black:focus, a.black:hover, a.black:active {
 .w-75 {
   width: 75px !important;
 }
+
+.config-list-devices {
+  display: initial !important;
+}
